# php-version-manager

./: .gitattributes  .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  build-dev.bat  build-dev.ps1  build-dev.sh  build.bat  build.ps1  build.sh
.cargo/: config.toml
.github/workflows/: release.yml
phpvm-core/: Cargo.toml
phpvm-core/src/: config.rs  download.rs  install.rs  lib.rs  logging.rs  manager.rs  platform.rs  provider.rs  state.rs  version.rs
phpvm-core/tests/: config_test.rs  platform_test.rs  provider_test.rs  state_test.rs  version_test.rs
phpvm-gui/: TESTING.md  index.html  package.json  vite.config.js
phpvm-gui/scripts/: set-copyright.js
phpvm-gui/src/: App.css  App.css.backup  App.jsx
phpvm-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
phpvm-gui/src-tauri/capabilities/: default.json
phpvm-gui/src-tauri/icons/: .gitkeep  generate-icons.sh
phpvm-gui/src-tauri/scripts/: set-copyright.ps1
phpvm-gui/src-tauri/src/: app_state.rs  commands.rs  main.rs  update.rs
phpvm-gui/src/components/: ErrorBanner.jsx  Header.jsx  Notification.jsx  NotificationContainer.jsx  Tabs.jsx  VersionCard.jsx
phpvm-gui/src/components/modals/: AboutModal.jsx  ConfirmModal.jsx  DeleteConfirmModal.jsx  ProgressModal.jsx  ThreadSafeModal.jsx  UpdateModal.jsx  VariantSelectModal.jsx
phpvm-gui/src/components/tabs/: AvailableVersionsTab.jsx  CacheTab.jsx  InstalledVersionsTab.jsx  SettingsTab.jsx
phpvm-gui/src/hooks/: useNotifications.js  usePhpVersions.js  useTauriReady.js  useVersionOperations.js
phpvm-gui/src/services/: phpvmApi.js
phpvm-gui/src/styles/: index.css  layout.css  reset.css  utilities.css
phpvm-gui/src/styles/components/: badges.css  buttons.css  cards.css  forms.css  header.css  modals.css  notifications.css  tabs.css
phpvm-gui/src/utils/: dateUtils.js  versionUtils.js
phpvm-gui/tests/: gui.test.js
