[package]
name = "phpvm-gui"
version = "0.1.3"
edition = "2021"
authors = ["JMSIT.cloud"]
license = "MIT"
description = "PHP Version Manager - Manage multiple PHP versions on Windows"
# Copyleft 🄯 JMSIT.cloud
repository = ""
homepage = ""
documentation = ""
readme = ""
keywords = ["php", "version-manager", "windows"]
categories = ["development-tools"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }


[dependencies]
phpvm-core = { path = "../../phpvm-core" }
tauri = { version = "2.0", features = ["devtools"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
